--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,7 @@
 body {
-    background-color: purple;
+    font-family: 'Montserrat', sans-serif;
 }
 
-h1{
-    color:white;
+h1 {
+    color: black;
 }
