--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,3 +5,10 @@ body {
 h1 {
     color: black;
 }
+
+.tag {
+
+    border: 1px dashed rebeccapurple;
+    border-radius: 5px;
+    margin:0 5px 0 0;
+}
